@@ -2,7 +2,7 @@
     4 MR 0000 d3
     4 MC 0001
     7 MR 0001 ec
-    7 PC a2ec
-   11 PW a2ec a2
+    8 PW a2ec a2
+    8 PC a2ec
 a200 0000 0000 0000 0000 0000 0000 0000 0000 0000 0000 0002
 00 01 0 0 0 0 11
