@@ -2,7 +2,6 @@
     4 MR 0000 ed
     4 MC 0001
     8 MR 0001 40
-    8 PC 296b
-   12 PR 296b ff
+    9 PR 296b ff
 83ad ff6b 7034 1f2f 0000 0000 0000 0000 0000 0000 0000 0002
 00 02 0 0 0 0 12
