@@ -2,7 +2,6 @@
     4 MR 0000 ed
     4 MC 0001
     8 MR 0001 41
-    8 PC 0881
-   12 PW 0881 08
+    9 PW 0881 08
 29a2 0881 d7dd ff4e 0000 0000 0000 0000 0000 0000 0000 0002
 00 02 0 0 0 0 12
