@@ -2,7 +2,7 @@
     4 MR 0000 ed
     4 MC 0001
     8 MR 0001 59
-    8 PC d512
-   12 PW d512 c5
+    9 PW d512 c5
+    9 PC d512
 388a d512 ecc5 93af 0000 0000 0000 0000 0000 0000 0000 0002
 00 02 0 0 0 0 12
