@@ -2,7 +2,6 @@
     4 MR 0000 ed
     4 MC 0001
     8 MR 0001 71
-    8 PC 20b3
-   12 PW 20b3 00
+    9 PW 20b3 00
 afa0 20b3 7b33 4ac1 0000 0000 0000 0000 0000 0000 0000 0002
 00 02 0 0 0 0 12
