@@ -2,8 +2,7 @@
     4 MR 0000 ed
     4 MC 0001
     8 MR 0001 ba
-    8 PR 069f ff
-    9 PC 069f
+   10 PR 069f ff
    13 MC 6b55
    16 MW 6b55 ff
    16 MC 6b54
@@ -15,8 +14,7 @@
    25 MR 0000 ed
    25 MC 0001
    29 MR 0001 ba
-   29 PR 059f ff
-   30 PC 059f
+   31 PR 059f ff
    34 MC 6b54
    37 MW 6b54 ff
    37 MC 6b53
@@ -28,8 +26,7 @@
    46 MR 0000 ed
    46 MC 0001
    50 MR 0001 ba
-   50 PR 049f ff
-   51 PC 049f
+   52 PR 049f ff
    55 MC 6b53
    58 MW 6b53 ff
    58 MC 6b52
@@ -41,8 +38,7 @@
    67 MR 0000 ed
    67 MC 0001
    71 MR 0001 ba
-   71 PR 039f ff
-   72 PC 039f
+   73 PR 039f ff
    76 MC 6b52
    79 MW 6b52 ff
    79 MC 6b51
@@ -54,8 +50,7 @@
    88 MR 0000 ed
    88 MC 0001
    92 MR 0001 ba
-   92 PR 029f ff
-   93 PC 029f
+   94 PR 029f ff
    97 MC 6b51
   100 MW 6b51 ff
   100 MC 6b50
@@ -67,8 +62,7 @@
   109 MR 0000 ed
   109 MC 0001
   113 MR 0001 ba
-  113 PR 019f ff
-  114 PC 019f
+  115 PR 019f ff
   118 MC 6b50
   121 MW 6b50 ff
 2542 009f d40d 6b4f 0000 0000 0000 0000 0000 0000 0000 0002
